test/inference/good/coreml_adt.mlt
type 'a list = Nil | Cons of 'a * 'a list

type nat = Zero | Succ of nat

let rec length = fun l ->
  match l with
  | Nil -> Zero
  | Cons (_, xs) -> Succ (length xs)

let n = length (Cons (1, Cons (2, Cons (3, Nil))))
